--- a/Group3Project/ClientApp/package.json
+++ b/Group3Project/ClientApp/package.json
@@ -14,30 +14,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.1",
+    "@abacritt/angularx-social-login": "^1.2.4",
+    "@angular/animations": "^14.2.0",
     "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.1.1",
-    "@angular/compiler": "~13.1.1",
-    "@angular/core": "~13.1.1",
-    "@angular/forms": "~13.1.1",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
     "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.1.1",
-    "@angular/platform-browser-dynamic": "~13.1.1",
-    "@angular/platform-server": "~13.1.1",
-    "@angular/router": "~13.1.1",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-server": "^14.2.0",
+    "@angular/router": "^14.2.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.6",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.1",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
@@ -47,6 +48,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.8.2"
   }
 }
